--- a/HelloTuiCpp/proj.win32/TuiCpp.vcxproj
+++ b/HelloTuiCpp/proj.win32/TuiCpp.vcxproj
@@ -206,6 +206,7 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClCompile Include="..\Classes\scene\Guide\Guideui.cpp" />
     <ClCompile Include="..\Classes\scene\Main\dialog\MsgBox.cpp" />
     <ClCompile Include="..\Classes\scene\Main\Mainui.cpp" />
+    <ClCompile Include="..\Classes\scene\Map\Mapui.cpp" />
     <ClCompile Include="..\Classes\scene\Recombine\Recombineui.cpp" />
     <ClCompile Include="..\Classes\scene\ShowPhone\ShowPhoneui.cpp" />
     <ClCompile Include="..\Classes\scene\Store\Storeui.cpp" />
@@ -328,6 +329,8 @@ xcopy /Y /Q "$(EngineRoot)external\websockets\prebuilt\win32\*.*" "$(OutDir)"</C
     <ClInclude Include="..\Classes\scene\Main\dialog\MsgBox.h" />
     <ClInclude Include="..\Classes\scene\Main\MainCfg.h" />
     <ClInclude Include="..\Classes\scene\Main\Mainui.h" />
+    <ClInclude Include="..\Classes\scene\Map\MapCfg.h" />
+    <ClInclude Include="..\Classes\scene\Map\Mapui.h" />
     <ClInclude Include="..\Classes\scene\Recombine\Recombineui.h" />
     <ClInclude Include="..\Classes\scene\ShowPhone\ShowPhoneCfg.h" />
     <ClInclude Include="..\Classes\scene\ShowPhone\ShowPhoneui.h" />
